# echiparacheta

./: a.out  bench.c  script.sh
Proiect/: test.c
Proiect/FIC2017/: CMakeCache.bk  CMakeCache.txt  CMakeLists.txt  Makefile  VideoTool  VideoTool.cpp  a.out  cmake_install.cmake  sockets.cpp  sockets.h
Proiect/FIC2017/Sockets/: CMakeLists.txt  Makefile  cmake_install.cmake  sockets.cpp  sockets.h
lab1/: 1.c  1.s  a.out  main.c
lab2/: 1.c  2.c  a.out
